# rag-in-practice

./: 01_basic_rag_with_mistral7b.ipynb  02_customer_support_rag_with_llama3.2.ipynb  03_conversational_rag.ipynb  03_query_rewrite_in_rag.ipynb  pyproject.toml
src/: utils.py
