[project]
name = "rag-in-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.0",
    "faiss-cpu>=1.11.0.post1",
    "jupyter>=1.1.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.6",
    "notebook>=7.4.5",
    "pandas>=2.3.1",
    "pypdf>=5.9.0",
    "sentence-transformers>=5.1.0",
    "transformers>=4.55.0",
]
